--- a/redux-pets-shop/client/src/App.css
+++ b/redux-pets-shop/client/src/App.css
@@ -1,38 +1,32 @@
-.App {
+body {
+  background-color: #eaebe3 !important;
+}
+.header {
+  background: white;
+}
+.address,.metamask { 
+  color: #59981A;
+  padding: 10px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.address span, .metamask span{ 
+  font-size: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hero-section {
+  background-image:   linear-gradient(to bottom, rgba(0,0,0,0.9), rgba(0,0,0,0.8)),
+  url('./images/hero.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 200px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.hero-section h2 {
+  text-align: center;
+  justify-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  font-size: 40px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: 100;
 }
